# IoT_fragile

./: CMakeLists.txt  Skeleton.cpp  SkeletonNew.cpp  Skeleton_Combine.cpp
